--- a/Master-Zhao/Master-Zhao.Shell/View/Utility/Pages/BossKeySetting.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/Utility/Pages/BossKeySetting.xaml
@@ -37,15 +37,7 @@
                 <RadioButton Content="切换到任务" HorizontalAlignment="Left" VerticalAlignment="Center" GroupName="bosskey" Name="cbx_Running" Checked="cbx_Running_Checked" Unchecked="cbx_Running_Unchecked" Style="{StaticResource RadioButtonStyle}" />
                 <Button Content="刷新列表" HorizontalAlignment="Left" VerticalAlignment="Center" Width="88" Height="22" Margin="100,0,0,0" Click="btn_RefreshRunning_Click" Style="{StaticResource ButtonStyle}" IsEnabled="{Binding ElementName=cbx_Running,Path=IsChecked}"/>
                 <GroupBox Header="当前执行的程序" Grid.Row="1" Margin="0,5,0,10" IsEnabled="{Binding ElementName=cbx_Running,Path=IsChecked}" BorderThickness="0">
-                    <ListBox BorderThickness="0" Style="{StaticResource ListBoxStyle}" Name="list_TasksRunning" SelectionChanged="list_TasksRunning_SelectionChanged" MaxHeight="210">
-                        <ListBox.ItemTemplate>
-                            <DataTemplate>
-                                <Grid>
-                                    <Label Content="{Binding MainWindowTitle}"/>
-                                </Grid>
-                            </DataTemplate>
-                        </ListBox.ItemTemplate>
-                    </ListBox>
+                    <ListBox BorderThickness="0" Style="{StaticResource ListBoxStyle}" Name="list_TasksRunning" SelectionChanged="list_TasksRunning_SelectionChanged" MaxHeight="210" DisplayMemberPath="MainWindowTitle"/>
                 </GroupBox>
             </Grid>
             <Grid Grid.Row="3" Margin="5,0,20,10" IsEnabled="{Binding ElementName=cbx_EnableBossKey,Path=IsChecked}">
@@ -57,16 +49,7 @@
                 <RadioButton Content="结束任务" HorizontalAlignment="Left" VerticalAlignment="Center" GroupName="bosskey" Name="cbx_Kill" Checked="cbx_Kill_Checked" Unchecked="cbx_Kill_Unchecked" Style="{StaticResource RadioButtonStyle}"/>
                 <Button Content="刷新列表" HorizontalAlignment="Left" VerticalAlignment="Center" Width="88" Height="22" Margin="100,0,0,0" Click="btn_RefreshKill_Click" Style="{StaticResource ButtonStyle}" IsEnabled="{Binding ElementName=cbx_Kill,Path=IsChecked}"/>
                 <GroupBox Header="当前执行的程序" Grid.Row="1" Margin="0,5,0,10" IsEnabled="{Binding ElementName=cbx_Kill,Path=IsChecked}" BorderThickness="0">
-                    <ListBox BorderThickness="0" Style="{StaticResource ListBoxStyle}" Name="list_TasksKill" SelectionChanged="list_TasksKill_SelectionChanged" MaxHeight="210">
-                        <ListBox.ItemTemplate>
-                            <DataTemplate>
-                                <Grid>
-                                    <!--<CheckBox Style="{StaticResource CheckBoxStyle}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="3" Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked"></CheckBox>-->
-                                    <Label HorizontalAlignment="Left" Margin="20,3,3,3" Content="{Binding MainWindowTitle}"/>
-                                </Grid>
-                            </DataTemplate>
-                        </ListBox.ItemTemplate>
-                    </ListBox>
+                    <ListBox BorderThickness="0" Style="{StaticResource ListBoxStyle}" Name="list_TasksKill" SelectionChanged="list_TasksKill_SelectionChanged" MaxHeight="210" DisplayMemberPath="MainWindowTitle"/>
                 </GroupBox>
             </Grid>
             <Grid Grid.Row="4" Margin="6,0,20,10" IsEnabled="{Binding ElementName=cbx_EnableBossKey,Path=IsChecked}">
