--- a/Master-Zhao/Master-Zhao.Shell/App.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Master_Zhao.Shell"
-             StartupUri="MainWindow.xaml" Startup="Application_Startup" DispatcherUnhandledException="Application_DispatcherUnhandledException">
+             StartupUri="StartMenu/WinFlat/WindowsFlat.xaml" Startup="Application_Startup" DispatcherUnhandledException="Application_DispatcherUnhandledException">
     <!--default startup-->
     <!--MainWindow.xaml-->
     
@@ -13,7 +13,7 @@
     <!--StartMenu/Win98/Windows98.xaml-->
     
     <!--flat start menu test-->
-    <!--StartMenu/Flat/FlatStartMenu.xaml-->
+    <!--StartMenu/WinFlat/WindowsFlat.xaml-->
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
