--- a/Master-Zhao/Master-Zhao.Shell/Themes/Generic.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/Themes/Generic.xaml
@@ -205,4 +205,68 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+    <converter:ToggleStateConverter x:Key="ToggleStateConverter"/>
+
+    <Style TargetType="{x:Type local:ToggleSwitch}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type local:ToggleSwitch}">
+                    <StackPanel Orientation="Horizontal" Margin="0,10"  HorizontalAlignment="Center" VerticalAlignment="Center">
+                        <ToggleButton IsChecked="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=ToggleSwitchState}">
+                            <ToggleButton.Style>
+                                <Style TargetType="{x:Type ToggleButton}">
+                                    <Setter Property="Margin" Value="0,0,10,0"/>
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="{x:Type ToggleButton}">
+                                                <Border x:Name="border"  BorderBrush="Black" BorderThickness="1.3" Height="20" Width="44">
+                                                    <Rectangle x:Name="rect" Fill="Black" Width="15" Height="15" Margin="0,0,20,0"/>
+                                                </Border>
+                                                <ControlTemplate.Triggers>
+                                                    <Trigger Property="IsChecked" Value="True">
+                                                        <Setter Property="Background" Value="LightBlue" TargetName="border"/>
+                                                        <Setter Property="Fill" Value="White" TargetName="rect"/>
+                                                        <Setter Property="Margin" Value="20,0,0,0" TargetName="rect"/>
+                                                        <Setter Property="BorderThickness" Value="0" TargetName="border"/>
+                                                    </Trigger>
+                                                    <Trigger Property="IsChecked" Value="False">
+                                                        <Setter Property="Background" Value="Transparent" TargetName="border"/>
+                                                        <Setter Property="Fill" Value="Black" TargetName="rect"/>
+                                                        <Setter Property="Margin" Value="0,0,20,0" TargetName="rect"/>
+                                                        <Setter Property="BorderThickness" Value="1.3" TargetName="border"/>
+                                                    </Trigger>
+
+                                                    <!--Cannot freeze this Storyboard timeline tree for use across threads-->
+                                                    <!--<EventTrigger RoutedEvent="Checked">
+                                                        <BeginStoryboard>
+                                                            <Storyboard>
+                                                                <ThicknessAnimation Duration="0:0:0.3" To="20,0,0,0"
+                                                                        Storyboard.TargetProperty="Margin" 
+                                                                        Storyboard.TargetName="rect"/>
+                                                            </Storyboard>
+                                                        </BeginStoryboard>
+                                                    </EventTrigger>
+                                                    <EventTrigger RoutedEvent="Unchecked">
+                                                        <BeginStoryboard>
+                                                            <Storyboard>
+                                                                <ThicknessAnimation Duration="0:0:0.3" To="0,0,20,0"
+                                                                        Storyboard.TargetProperty="Margin" 
+                                                                        Storyboard.TargetName="rect"/>
+                                                            </Storyboard>
+                                                        </BeginStoryboard>
+                                                    </EventTrigger>-->
+                                                </ControlTemplate.Triggers>
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Style>
+                            </ToggleButton.Style>
+                        </ToggleButton>
+                        <TextBlock Text="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=ToggleSwitchState,Converter={StaticResource ToggleStateConverter}}" VerticalAlignment="Center"/>
+                    </StackPanel>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
