startup mgmt context menu

--- a/Master-Zhao/Master-Zhao.Shell/View/SystemMgmt/Pages/StartupManagement.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/SystemMgmt/Pages/StartupManagement.xaml
@@ -13,6 +13,12 @@
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid>
+                        <Grid.ContextMenu>
+                            <ContextMenu>
+                                <MenuItem Header="打开文件路径"/>
+                                <MenuItem Header="属性"/>
+                            </ContextMenu>
+                        </Grid.ContextMenu>
                         <Grid.RowDefinitions>
                             <RowDefinition/>
                             <RowDefinition/>
