--- a/Master-Zhao/Master-Zhao.Shell/Controls/UserControls/ThemeControl.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/Controls/UserControls/ThemeControl.xaml
@@ -6,14 +6,16 @@
              xmlns:local="clr-namespace:Master_Zhao.Shell.Controls.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition Height="30"/>
-        </Grid.RowDefinitions>
+    <Border x:Name="border" CornerRadius="3" BorderBrush="{StaticResource AccentBaseColor}" Background="Transparent" MouseEnter="Border_MouseEnter" MouseLeave="Border_MouseLeave">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition Height="30"/>
+            </Grid.RowDefinitions>
 
-        <Image x:Name="image"></Image>
-        <Rectangle x:Name="rect"></Rectangle>
-        <Label Grid.Row="1" HorizontalAlignment="Center" Name="label"></Label>
-    </Grid>
+            <Image x:Name="image"></Image>
+            <Rectangle x:Name="rect"></Rectangle>
+            <Label Grid.Row="1" HorizontalAlignment="Center" Name="label"></Label>
+        </Grid>
+    </Border>
 </UserControl>
