add execute tool

--- a/Master-Zhao/Master-Zhao.Shell/App.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/App.xaml
@@ -34,6 +34,7 @@
                 <ResourceDictionary Source="Styles/ListBoxStyle.xaml"/>
                 <ResourceDictionary Source="Styles/RadioButtonStyle.xaml"/>
                 <ResourceDictionary Source="Styles/ImageStyle.xaml"/>
+                <ResourceDictionary Source="Styles/TabControlStyle.xaml"/>
 
                 <ResourceDictionary Source="Resources/ContextMenu/NotifyIconContextMenu.xaml"/>
             </ResourceDictionary.MergedDictionaries>
