--- a/Master-Zhao/Master-Zhao.Shell/Styles/TabControlStyle.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/Styles/TabControlStyle.xaml
@@ -1,4 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+    <Style x:Key="TabControlStyle" TargetType="{x:Type TabControl}">
+        <Setter Property="BorderThickness" Value="0"/>
+    </Style>
 </ResourceDictionary>
