--- a/Master-Zhao/Master-Zhao.Shell/View/Utility/ToolsPage.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/Utility/ToolsPage.xaml
@@ -27,6 +27,7 @@
             <StackPanel Grid.Row="1">
                 <ToggleButton Content="快速启动菜单" Style="{StaticResource FlatButtonStyle}" Checked="ToggleButton_Checked" Click="btn_FastRunClick" IsChecked="True"/>
                 <ToggleButton Content="老板键" Style="{StaticResource FlatButtonStyle}" Checked="ToggleButton_Checked" Click="btn_BossKeyClick"/>
+                <ToggleButton Content="快捷启动命令" Style="{StaticResource FlatButtonStyle}" Checked="ToggleButton_Checked" Click="btn_ExecuteToolClick"/>
             </StackPanel>
         </Grid>
 
