--- a/Master-Zhao/Master-Zhao.Shell/App.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/App.xaml
@@ -20,6 +20,9 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <!--lang resource-->
+                <ResourceDictionary Source="Resources/StringResources/MMC.xaml"/>
+
                 <!--FontAwesome-->
                 <ResourceDictionary Source="FontAwesome/FontAwesomeStyle.xaml"/>
                 
