--- a/Master-Zhao/Master-Zhao.Shell/View/Utility/Pages/ExecuteToolSetting.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/Utility/Pages/ExecuteToolSetting.xaml
@@ -9,8 +9,16 @@
       Title="ExecuteToolSetting">
     <Page.Resources>
         <DataTemplate x:Key="ListBoxItemDataTemplate">
-            <Label Content="{Binding Name}"/>
+            <Grid Height="40" Margin="0,1">
+                <Image Source="{Binding Icon}" Width="36" Height="36" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="3,0,0,0"/>
+                <Label Foreground="{Binding RelativeSource={RelativeSource AncestorType=ListBoxItem},Path=Foreground}" Content="{Binding Name}" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="40,0,0,0"/>
+            </Grid>
         </DataTemplate>
+
+        <ContextMenu x:Key="ExecuteListContextMenu">
+            <MenuItem Header="打开文件位置" Click="menu_LocateFile_Click"/>
+            <MenuItem Header="搜索详细信息" Click="menu_SearchFile_Click"/>
+        </ContextMenu>
     </Page.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -20,22 +28,22 @@
 
         <TabControl Background="Transparent" Style="{StaticResource TabControlStyle}">
             <TabItem Header="可执行文件" ToolTip="可执行文件">
-                <ListBox Style="{StaticResource ListBoxStyle}" Name="list_exe" ItemTemplate="{StaticResource ListBoxItemDataTemplate}" Margin="0,0,0,30" SelectionChanged="list_SelectionChanged"></ListBox>
+                <ListBox Style="{StaticResource ListBoxStyle}" Name="list_exe" ItemTemplate="{StaticResource ListBoxItemDataTemplate}" Margin="0,0,0,30" SelectionChanged="list_SelectionChanged" ItemContainerStyle="{StaticResource ListBoxItemStyle}" ContextMenu="{StaticResource ExecuteListContextMenu}"></ListBox>
             </TabItem>
             <TabItem Header="管理控制台项" ToolTip="微软管理控制台MMC(Microsoft Management Console)用来添加/删除的嵌入式管理单元文件">
-                <ListBox Style="{StaticResource ListBoxStyle}" Name="list_mmc" ItemTemplate="{StaticResource ListBoxItemDataTemplate}" Margin="0,0,0,30" SelectionChanged="list_SelectionChanged"></ListBox>
+                <ListBox Style="{StaticResource ListBoxStyle}" Name="list_mmc" ItemTemplate="{StaticResource ListBoxItemDataTemplate}" Margin="0,0,0,30" SelectionChanged="list_SelectionChanged" ItemContainerStyle="{StaticResource ListBoxItemStyle}" ContextMenu="{StaticResource ExecuteListContextMenu}"></ListBox>
             </TabItem>
             <TabItem Header="控制面板项" ToolTip="控制面板项">
-                <ListBox Style="{StaticResource ListBoxStyle}" Name="list_control" ItemTemplate="{StaticResource ListBoxItemDataTemplate}" Margin="0,0,0,30" SelectionChanged="list_SelectionChanged"></ListBox>
+                <ListBox Style="{StaticResource ListBoxStyle}" Name="list_control" ItemTemplate="{StaticResource ListBoxItemDataTemplate}" Margin="0,0,0,30" SelectionChanged="list_SelectionChanged" ItemContainerStyle="{StaticResource ListBoxItemStyle}" ContextMenu="{StaticResource ExecuteListContextMenu}"></ListBox>
             </TabItem>
-            <TabItem Header="可执行脚本" ToolTip=".COM;.BAT;.CMD;.VBS;.VBE;.JS;.JSE;.WSF;.WSH等可执行脚本">
-                <ListBox Style="{StaticResource ListBoxStyle}" Name="list_script" ItemTemplate="{StaticResource ListBoxItemDataTemplate}" Margin="0,0,0,30" SelectionChanged="list_SelectionChanged"></ListBox>
-            </TabItem>
+            <!--<TabItem Header="可执行脚本" ToolTip=".COM;.BAT;.CMD;.VBS;.VBE;.JS;.JSE;.WSF;.WSH等可执行脚本">
+                <ListBox Style="{StaticResource ListBoxStyle}" Name="list_script" ItemTemplate="{StaticResource ListBoxItemDataTemplate}" Margin="0,0,0,30" SelectionChanged="list_SelectionChanged" ItemContainerStyle="{StaticResource ListBoxItemStyle}" ContextMenu="{StaticResource ExecuteListContextMenu}"></ListBox>
+            </TabItem>-->
             <TabItem Header="动态链接库" ToolTip="Dll中包含的可执行项">
-                <ListBox Style="{StaticResource ListBoxStyle}" Name="list_dll" ItemTemplate="{StaticResource ListBoxItemDataTemplate}" Margin="0,0,0,30" SelectionChanged="list_SelectionChanged"></ListBox>
+                <ListBox Style="{StaticResource ListBoxStyle}" Name="list_dll" ItemTemplate="{StaticResource ListBoxItemDataTemplate}" Margin="0,0,0,30" SelectionChanged="list_SelectionChanged" ItemContainerStyle="{StaticResource ListBoxItemStyle}" ContextMenu="{StaticResource ExecuteListContextMenu}"></ListBox>
             </TabItem>
             <TabItem Header="Windows设置项" ToolTip="Windows 10设置项">
-                <ListBox Style="{StaticResource ListBoxStyle}" Name="list_mssetting" ItemTemplate="{StaticResource ListBoxItemDataTemplate}" Margin="0,0,0,30" SelectionChanged="list_SelectionChanged"></ListBox>
+                <ListBox Style="{StaticResource ListBoxStyle}" Name="list_mssetting" ItemTemplate="{StaticResource ListBoxItemDataTemplate}" Margin="0,0,0,30" SelectionChanged="list_SelectionChanged" ItemContainerStyle="{StaticResource ListBoxItemStyle}" ContextMenu="{StaticResource ExecuteListContextMenu}"></ListBox>
             </TabItem>
         </TabControl>
 
@@ -53,7 +61,7 @@
             </StackPanel>
 
             <Grid Grid.Row="1">
-                <Button Content="打开运行" Style="{StaticResource ButtonStyle}" Width="88" Height="28" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,0,110,0"></Button>
+                <Button Content="打开运行" Style="{StaticResource ButtonStyle}" Width="88" Height="28" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,0,110,0" Click="btn_openrun_Click"></Button>
                 <Button Content="直接执行" Style="{StaticResource ButtonStyle}" Width="88" Height="28" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,0,10,0" Click="btn_execute_Click"></Button>
             </Grid>
         </Grid>
